# iceberg-partitioning

./: .gitignore  README.en.md  README.fr.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: iamdataeng-evaluate.yml
contracts/: orders.json
fixtures/: generate_fixtures.py
notebooks/: explain.md
src/: catalog.py  create_table.py  load.py  time_travel_demo.py
tests/: test_evaluate.py
