[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iamdataeng-iceberg-partitioning"
version = "0.1.0"
description = "IAmDataEng paid project — Apache Iceberg on MinIO with hidden partitioning and snapshot time-travel."
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyiceberg[s3fs,pyarrow]==0.7.1",
    "pyarrow==17.0.0",
    "duckdb==1.1.3",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[tool.setuptools]
packages = ["src", "fixtures", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
